uploading complete responsive navbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 @plugin "daisyui";
+
+body{
+    background-color: #c8c7c7;
+    font-family: "Roboto", sans-serif;
+}
+
+a.active{
+    text-decoration: underline;
+    color: purple;
+}
+
+.nav{
+    transition: all 0.4s linear;
+    font-size: 13px;
+}
